Replacing more instances of ArrayList with faster structure